--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose ",
+    "test": "cross-env NODE_ENV=test jest --verbose",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
@@ -14,17 +14,20 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^29.4.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "standard": "^17.0.0",
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.9.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
