--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -1,44 +1,39 @@
 {
-  "name": "frontend",
+  "name": "redux-anecdotes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.2.3",
-    "prop-types": "^15.8.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
-    "cypress": "^12.9.0",
-    "eslint-plugin-cypress": "^2.13.2",
-    "standard": "^17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "server": "json-server -p3001 --watch db.json"
   },
   "eslintConfig": {
-    "plugins": [
-      "react", "cypress"
-    ],
     "extends": [
       "./node_modules/standard/eslintrc.json"
+    ],
+    "plugins": [
+      "react"
     ],
     "env": {
       "commonjs": true,
       "es6": true,
       "node": true,
-      "jest": true,
-      "cypress/globals": true
+      "jest": true
     }
   },
   "browserslist": {
@@ -53,5 +48,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003"
+  "devDependencies": {
+    "eslint-plugin-react": "^7.32.2",
+    "json-server": "^0.17.3",
+    "standard": "^17.0.0"
+  }
 }
