--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.4",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
